external-crates/move/crates/move-compiler/tests/move_check/expansion/pack_no_fields_block_expr.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/expansion/pack_no_fields_block_expr.move:4:13
  │
4 │         let s = S { let x = 0; x };
  │             ^ Unused local variable 's'. Consider removing or prefixing with an underscore: '_s'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/pack_no_fields_block_expr.move:4:21
  │
4 │         let s = S { let x = 0; x };
  │                     ^ Expected a field expression

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/pack_no_fields_block_expr.move:4:30
  │
4 │         let s = S { let x = 0; x };
  │                   -          ^ Expected '}'
  │                   │           
  │                   To match this '{'

error[E03009]: unbound variable
  ┌─ tests/move_check/expansion/pack_no_fields_block_expr.move:4:32
  │
4 │         let s = S { let x = 0; x };
  │                                ^ Unbound variable 'x'

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/pack_no_fields_block_expr.move:4:35
  │
4 │         let s = S { let x = 0; x };
  │                                   ^
  │                                   │
  │                                   Unexpected ';'
  │                                   Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

